# django_chatbot

./: .gitignore  README.md  api_test.html  db.sqlite3  env.example  manage.py  pyproject.toml  speed_test.html  start.py
chatbot/: admin.py  llm_agent.py  models.py  serializers.py  tests.py  urls.py  views.py
chatbot_project/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
static/js/: speed.js
templates/chatbot/: chat.html
