[project]
name = "sql-chatbot"
version = "0.1.0"
description = "A Django-based chatbot application that uses a custom LLM agent to generate SQL queries from natural language prompts"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2.7",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.1",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["chatbot_project", "chatbot"] 